@@ -1,3 +1,8 @@
+Sun Jan 31 18:29:22 1999  Thomas Bushnell, BSG  <tb@mit.edu>
+
+	* times.c (trivfs_set_atime, trivefs_set_mtime): Take advantage of
+	new semantics for file_utimes.
+
 1998-08-20  Roland McGrath  <roland@baalperazim.frob.com>
 
 	* file-get-fs-options.c (trivfs_S_file_get_fs_options):
